// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - CustomRadioButton renders correctly 1`] = `
Array [
  <input
    className="sc-bdVaJa kRURFE"
    id="123"
    name="name123"
    type="radio"
    value="value123"
  />,
  <label
    className="sc-htpNat OeGne"
    htmlFor="123"
  >
    label123
  </label>,
]
`;

exports[`COMPONENT - CustomRadioButton renders correctly with icon 1`] = `
Array [
  <input
    className="sc-bdVaJa kRURFE"
    id="123"
    name="name123"
    type="radio"
    value="value123"
  />,
  <label
    className="sc-bwzfXH hTdoZH"
    htmlFor="123"
  >
    <svg
      height="75"
      viewBox="0 0 490 490"
      width="75"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <circle
          cx="157.651"
          cy="175.288"
          r="42.642"
        />
        <circle
          cx="332.349"
          cy="175.289"
          r="42.642"
        />
        <path
          d="M69.086,490h351.829C459.001,490,490,459.001,490,420.914V69.086C490,30.999,459.001,0,420.914,0H69.086 C30.991,0,0,30.999,0,69.086v351.829C0,459.001,30.991,490,69.086,490z M30.625,69.086c0-21.204,17.257-38.461,38.461-38.461 h351.829c21.204,0,38.461,17.257,38.461,38.461v351.829c0,21.204-17.257,38.461-38.461,38.461H69.086 c-21.204,0-38.461-17.257-38.461-38.461V69.086z"
        />
      </g>
    </svg>
    <span>
      label123
    </span>
  </label>,
]
`;
